Remove postfix for dummy file
See: https://github.com/micronaut-projects/micronaut-openapi/issues/2180